@@ -1,3 +1,15 @@
+2011-09-28  Filip Pizlo  <fpizlo@apple.com>
+
+        DFG checkArgumentTypes fails to check boolean predictions
+        https://bugs.webkit.org/show_bug.cgi?id=69059
+
+        Reviewed by Gavin Barraclough.
+
+        * fast/js/boolean-argument-prediction-expected.txt: Added.
+        * fast/js/boolean-argument-prediction.html: Added.
+        * fast/js/script-tests/boolean-argument-prediction.js: Added.
+        (predictBooleanArgument):
+
 2011-09-28  Shinichiro Hamaji  <hamaji@chromium.org>
 
         Chromium test_expectations update for isindex-with-no-form.html
